--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,79 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  box-sizing: border-box;
 }
 
 body {
+  background-color: #f5f7fa;
+  font-family: Inter, sans-serif;
+  font-size: 0.875rem;
+  line-height: 1.5;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  min-block-size: 100vh;
+}
+
+input,
+select {
+  background-color: transparent;
+  border: 0;
+  font: inherit;
+  color: inherit;
+  padding: 0;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-weight: 300;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.app {
+  display: grid;
+  min-block-size: 100vh;
+  place-items: center;
+  text-align: center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.container {
+  display: grid;
+  place-items: center;
+}
+
+.form {
+  background-color: #fff;
+  border-radius: 1em;
+  box-shadow: 0px 12px 28px rgb(0 0 0 / 16%);
+  display: grid;
+  gap: 1em;
+  margin-block-end: 1.5em;
+  padding: 1.5em;
+  text-align: left;
+  max-width: 20em;
+}
+
+.form__field {
+  background-color: #eee;
+  border-radius: 0.75em;
+  display: flex;
+}
+
+.form__label {
+  place-items: center;
+  padding: 0.25em;
+  aspect-ratio: 1;
+  display: inline-block;
+  color: rgb(104, 113, 115);
+  text-align: center;
+  width: 28px;
+  flex-shrink: 0;
+}
+
+.form__input {
+  padding: 0.25em;
+  width: 100%;
+}
+
+.form__input--select {
+  width: 7em;
+}
+
+output {
+  font-style: italic;
 }
